fix: View button overflow and height

--- a/frontend/styles/pages/debug-view.css
+++ b/frontend/styles/pages/debug-view.css
@@ -107,7 +107,7 @@
     width: 100%;
     height: 10%;
     padding: 2vh 2vw;
-    
+
     z-index: 1;
     
     font-size: 22px;
@@ -122,6 +122,7 @@
     flex-wrap: nowrap;
     justify-content: start;
     align-items: center;
+    height: 100%;
 }
 
 .debug-view-right-button-bar {
@@ -134,7 +135,7 @@
     
     margin-right: 2px;
     
-    gap: 18px;
+    gap: 18px;  
 }
 
 .debug-view-button {
@@ -143,6 +144,7 @@
 }
 
 .debug-view-select-button {
+    overflow: hidden;
     cursor: pointer;
     transition: color 0.5s;
     
